Fix vertical alignment of menu items

--- a/assets/stylesheets/layout/_header.scss
+++ b/assets/stylesheets/layout/_header.scss
@@ -68,6 +68,13 @@
   }
 }
 
+.menu li {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+}
+
 .menu.active {
   top: 4.5rem;
 
